deployment/scala-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scala-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scala-app
  template:
    metadata:
      labels:
        app: scala-app
    spec:
      containers:
      - name: scala-app
        image: scala-app:latest
        imagePullPolicy: IfNotPresent  # Cette ligne permet de ne pas tirer l'image à chaque fois
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scala-app
spec:
  selector:
    app: scala-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
